[package]
name = "zinput"
version = "0.1.0"
authors = ["Shoaib Syed <shoaibmsyed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
dashmap = "4.0"
eframe = "0.13"
log = "0.4"
parking_lot = "0.11"
rusb = "0.8"
simple_logger = "1.11"
swi_protocol = { path = "../swi_protocol" }
uuid = { version = "0.8", features = ["v4"] }
vigem = "0.9"