[package]
name = "bindlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "native"
path = "src/main_native.rs"

[dependencies]
cranelift = "0.86.1"
cranelift-jit = "0.86.1"
cranelift-module = "0.86.1"
