[package]
name = "zinput_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.5"
paste = "1.0.6"
serde = { version = "1.0.137", features = ["derive"], optional = true }
serde-big-array = { version = "0.4.1", optional = true }

[features]
default = ["device", "serde"]
device = []
serde = ["dep:serde", "dep:serde-big-array"]
