[package]
name = "zinput_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
dashmap = "5.3.4"
eframe = "0.13"
index-map = "0.1.0"
parking_lot = "0.12.0"
paste = "1.0"
uuid = { version = "0.8", features = ["v4"] }
zinput_device = { path = "../zinput_device" }
