[package]
name = "znet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.9"
rustc-hash = { version = "1.1.0" }

[dependencies.zinput_device]
path = "../zinput_device"
default-features = false
