[package]
name = "zplugin_vcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.13"
parking_lot = "0.12.0"
zinput_device = { path = "../zinput_device" }
zinput_engine = { path = "../zinput_engine" }
